# path_tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: Arcade.lights  Bistro_inside.lights  Bistro_outside.lights  attic.lights  attribution.txt  cornell_box.lights  cornell_box.vks  living_room_day.lights  living_room_night.lights
data/saves/Arcade/: default.rt_save
src/: CMakeLists.txt  alias_table.c  alias_table.h  camera.c  camera.h  compute_graph.c  compute_graph.h  main.c  main.h  math_utilities.c  math_utilities.h  nuklear.c  nuklear.h  pfm.c  pfm.h  phase_functions.c  phase_functions.h  scene.c  scene.h  serializer.c  serializer.h  slides.c  string_utilities.c  string_utilities.h  textures.c  textures.h  timer.c  timer.h  tonemap.c  tonemap.h  vulkan_basics.c  vulkan_basics.h  vulkan_formats.c  vulkan_formats.h
src/shaders/: apply_extinction_transfer_function.comp.glsl  bc4_compress.comp.glsl  brdfs.glsl  brick_reduce.comp.glsl  camera_utilities.glsl  compute_quantization_coeffs.comp.glsl  constants.glsl  default_quantization_coeffs.comp.glsl  grid_indices.glsl  gui.frag.glsl  gui.vert.glsl  mesh_quantization.glsl  noise.glsl  pathtrace.frag.glsl  phase_functions.glsl  shading_data.glsl  srgb_utility.glsl  stat_reduce_0.comp.glsl  stat_reduce_1.comp.glsl  tonemap.frag.glsl  tonemap.vert.glsl  volume.frag.glsl  volume.vert.glsl  volume_quantization.glsl  volume_shader.comp.glsl  volume_utilities.glsl
tools/: io_export_spherical_lights_blender40.py  material_conversion.py  volume_conversion.py  vulkan_formats.py
tools/texture_conversion/: main.c
(+22 files in other folders)
